@@ -11,6 +11,7 @@ Roundcube Webmail ContextMenu
  * Depreciate contextRow class, use context-source instead
  * Depreciate rcmmainmenu class, use rcm-mainmenu instead
  * Depreciate rcmsubmenu and submenu classes, use rcm-submenu instead
+ * Add new event addmenuitem
 
  * Remove special handling for group-create/rename (requires roundcube rev ec98aa5)
  * "Flattened" the larry theme: fresher look by removing shadows and gradients
